--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asteroid Navigator: Deep Space Survival</title>
     <meta name="description" content="Immersive 3D space survival game built with Three.js" />
-    <meta name="author" content="Lovable" />
+  <meta name="author" content="Ahmed" />
 
     <meta property="og:title" content="Asteroid Navigator: Deep Space Survival" />
     <meta property="og:description" content="Immersive 3D space survival game built with Three.js" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@ahm-dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
